{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 41,
  "lineage": "dd74a64e-ac65-4cad-0062-ff242a89d284",
  "resources": [
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712947033:internet-gateway/igw-013d85cb95722c5eb",
            "id": "igw-013d85cb95722c5eb",
            "owner_id": "339712947033",
            "tags": {
              "Name": "my-vpc-igw"
            },
            "tags_all": {
              "Name": "my-vpc-igw"
            },
            "vpc_id": "vpc-04f21c70153e98979"
          },
          "dependencies": [
            "module.ecs_service.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712947033:loadbalancer/app/my-ecs-service-lb/513d8ae212ec6f09",
            "arn_suffix": "app/my-ecs-service-lb/513d8ae212ec6f09",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-ecs-service-lb-412218089.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712947033:loadbalancer/app/my-ecs-service-lb/513d8ae212ec6f09",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-ecs-service-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0be0930bbe1e05673"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07159f6185e047fb9"
              },
              {
                "subnet_id": "subnet-0f4c953e7604732a0"
              }
            ],
            "subnets": [
              "subnet-07159f6185e047fb9",
              "subnet-0f4c953e7604732a0"
            ],
            "tags": {
              "Name": "my-ecs-service-lb"
            },
            "tags_all": {
              "Name": "my-ecs-service-lb"
            },
            "vpc_id": "vpc-04f21c70153e98979",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs_service.aws_security_group.main",
            "module.ecs_service.aws_subnet.subnet",
            "module.ecs_service.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:339712947033:targetgroup/my-ecs-service-tg/f9efa8ddccccce1c",
            "arn_suffix": "targetgroup/my-ecs-service-tg/f9efa8ddccccce1c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:339712947033:targetgroup/my-ecs-service-tg/f9efa8ddccccce1c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:339712947033:loadbalancer/app/my-ecs-service-lb/513d8ae212ec6f09"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-ecs-service-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "my-ecs-service-tg"
            },
            "tags_all": {
              "Name": "my-ecs-service-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04f21c70153e98979"
          },
          "dependencies": [
            "module.ecs_service.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712947033:route-table/rtb-0399453cac23f2472",
            "id": "rtb-0399453cac23f2472",
            "owner_id": "339712947033",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-013d85cb95722c5eb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-vpc-rt"
            },
            "tags_all": {
              "Name": "my-vpc-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f21c70153e98979"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_service.aws_internet_gateway.main",
            "module.ecs_service.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3c074eeb4d7435a",
            "route_table_id": "rtb-0399453cac23f2472",
            "subnet_id": "subnet-0f4c953e7604732a0"
          },
          "dependencies": [
            "module.ecs_service.aws_internet_gateway.main",
            "module.ecs_service.aws_route_table.main",
            "module.ecs_service.aws_subnet.subnet",
            "module.ecs_service.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031dcdf053f3de664",
            "route_table_id": "rtb-0399453cac23f2472",
            "subnet_id": "subnet-07159f6185e047fb9"
          },
          "dependencies": [
            "module.ecs_service.aws_internet_gateway.main",
            "module.ecs_service.aws_route_table.main",
            "module.ecs_service.aws_subnet.subnet",
            "module.ecs_service.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712947033:security-group/sg-0be0930bbe1e05673",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be0930bbe1e05673",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240724004113005400000001",
            "name_prefix": "terraform-",
            "owner_id": "339712947033",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-ecs-service-sg"
            },
            "tags_all": {
              "Name": "my-ecs-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f21c70153e98979"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_service.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712947033:subnet/subnet-0f4c953e7604732a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4c953e7604732a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712947033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-subnet-0"
            },
            "tags_all": {
              "Name": "my-vpc-subnet-0"
            },
            "vpc_id": "vpc-04f21c70153e98979"
          },
          "dependencies": [
            "module.ecs_service.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712947033:subnet/subnet-07159f6185e047fb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07159f6185e047fb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339712947033",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-subnet-1"
            },
            "tags_all": {
              "Name": "my-vpc-subnet-1"
            },
            "vpc_id": "vpc-04f21c70153e98979"
          },
          "dependencies": [
            "module.ecs_service.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.ecs_service.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339712947033:vpc/vpc-04f21c70153e98979",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ef7c16bd2f6f6f4",
            "default_route_table_id": "rtb-0d671ee7dd5746b01",
            "default_security_group_id": "sg-09e07c59fe0f29045",
            "dhcp_options_id": "dopt-0283c5a3d34a20853",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f21c70153e98979",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d671ee7dd5746b01",
            "owner_id": "339712947033",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}